Fix: home title went out of bounds.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@
   text-shadow: 0 0 4px black;
   font-size: 4rem;
   font-weight: 700;
+  max-width: calc(100vw - 7rem);
 }
 
 .title-wrap {
@@ -135,7 +136,8 @@ section {
   .home-title {
     left: 1rem;
     bottom: 5.2rem;
-    font-size: 2.5rem;
+    font-size: 2.3rem;
+    max-width: calc(100vw - 1rem);
   }
 
   .home-header-carousel {
